--- a/src/components/sections/MusicSection/MusicSection.module.scss
+++ b/src/components/sections/MusicSection/MusicSection.module.scss
@@ -25,7 +25,6 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        margin: auto;
         width: 100%;
         height: 100%;
         overflow-x: scroll;
